--- a/finans/doação.html
+++ b/finans/doação.html
@@ -38,20 +38,23 @@
         <div class="collapse navbar-collapse" id="nav-principal">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="../index.html" class="nav-link">INÍCIO</a>
+              <a style="color: white;" href="../index.html" class="nav-link">INÍCIO</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a href="" class="nav-link">RECURSOS</a>
-            </li>
+            </li> -->
             <li class="nav-item">
+              <a style="color: white;" href="../contato.html" class="nav-link">CONTATO</a>
+            </li>
+            <!-- <li class="nav-item">
               <a href="" class="nav-link">BENEFÍCIOS</a>
-            </li>
+            </li> -->
             <li class="nav-item">
-              <a href="../News/news.html" class="nav-link">NEWS</a>
+              <a style="color: white;" href="../News/news.html" class="nav-link">NOTÍCIAS</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a href="" class="btn btn-outline-light ml-4">Entrar</a>
-            </li>
+            </li> -->
           </ul>
         </div>
 
@@ -67,7 +70,7 @@
         <div class="col-md-6 d-flex">
           <!-- Textos da seção -->
           <div class="align-self-center">
-            <h1 class="display-4">DOE PARA A CAPSULE</h1>
+            <h1 class="display-4">APOIE NOSSA CAUSA</h1>
             <p>
               Contribua com uma doação para a Capsule, esse valor usamos para ajudar pessoas sem acesso a energia de
               qualidade
@@ -77,8 +80,8 @@
             <form class="mt-4 mb-4">
               <div class="input-group input-group-lg">
                 <input type="email" placeholder="Seu e-mail" class="form-control">
-                <input type="password" placeholder="Seu senha" class="form-control">
-                <div class="input-group-append">
+                <!-- <input type="password" placeholder="Seu senha" class="form-control"> -->
+                <div class="input-group-append"> 
                   <button type="submit" class="btn btn-primary">Cadastre-se</button>
                 </div>
               </div>
@@ -97,7 +100,10 @@
         </div>
         <!--/fim textos da seção -->
         <div class="col-md-6 d-none d-md-block">
-          <img src="img/capa-mulher.png">
+          <img src="img/qrcode.jpeg" width="140" alt="qrcode">
+          <div>
+            <img src="img/capa-mulher.png">
+          </div>
         </div>
       </div>
     </div>
