--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,700&family=Nunito:wght@700&family=Yellowtail&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
@@ -19,37 +19,46 @@
     <nav>
         <a href="#">CAPSULE CORP</a>
         <ul>
-            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#sobre">SOBRE</a></li>
             <li><a href="finans/doação.html">APOIAR A CAPSULE</a></li>
             <li><a href="News/news.html">NOTÍCIAS</a></li>
-            <li><a href="#contato">CONTATOS</a></li>
+            <li><a href="contato.html">CONTATO</a></li>
         </ul>
     </nav>
 
     <header id="topo">
         <h1>CAPSULE CORP</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet suscipit libero. Suspendisse id
-            elit et leo ornare hendrerit sed condimentum nibh. Phasellus in lectus id lectus lacinia feugiat quis et
-            erat. Praesent laoreet, orci a ornare convallis, enim arcu tempor nunc, in vehicula nunc ipsum a dui. Nunc
-            et erat mauris. Ut suscipit tempus quam, et porta ligula fermentum sed. Pellentesque sit amet felis et
-            lectus accumsan ullamcorper. In a quam laoreet, porta orci sed, tincidunt justo. Maecenas ut ante viverra,
-            sollicitudin urna et, gravida nunc. Sed a dolor at lectus vulputate interdum eget a sapien. Phasellus
-            gravida odio vitae erat dapibus blandit id at diam. Suspendisse feugiat tincidunt gravida. Morbi malesuada
-            nisi vel dui suscipit lacinia.</p>
+        <p>CAPSULE CORP, uma Organização Sem Fins Lucrativos, criada através da necessidade dos
+            Objetivos de Desenvolvimento Sustentável da Organização das Nações Unidas.
+            Entre 1990 e 2010, o número de pessoas com acesso à eletricidade cresceu 1.7 bilhão, e como a população
+            global continua a crescer, também crescerá a demanda por energia barata. Uma economia global dependente de
+            combustíveis fósseis e o aumento das emissões de gás carbônico está criando drásticas mudanças no clima, o
+            que impacta diretamente todos os continentes. Esforços para promover o uso de energias limpas garantiram,
+            segundo dados de 2011, que 20 por cento da energia consumida no planeta venha de fontes renováveis. Mas
+            ainda uma em cada sete pessoas no planeta não tem acesso à eletricidade e como a demanda continua a crescer
+            há a necessidade de substancialmente aumentar a produção de energias renováveis. Garantir o acesso universal
+            à energia e a um preço justo até 2030 significa investir em fontes de energia limpa, como a energia solar,
+            eólica e térmica. Adotar padrões de custos sustentáveis para uma vasta gama de tecnologia também pode
+            reduzir o consumo global de energia em 14 por cento. Isso significa 1300 centrais elétricas a menos no
+            planeta. Expandir a infraestrutura e modernizar a tecnologia para fornecer energia limpa em todos os países
+            em desenvolvimento é um objetivo crucial para que o crescimento econômico colabore com o meio ambiente.
+        </p>
         <a href="#serviços" class="botao"> Ver mais...</a>
     </header>
 
     <section id="sobre">
-        <h2>Sobre</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet suscipit libero. Suspendisse id
-            elit et leo ornare hendrerit sed condimentum nibh. Phasellus in lectus id lectus lacinia feugiat quis et
-            erat. Praesent laoreet, orci a ornare convallis, enim arcu tempor nunc, in vehicula nunc ipsum a dui. Nunc
-            et erat mauris. Ut suscipit tempus quam, et porta ligula fermentum sed. Pellentesque sit amet felis et
-            lectus accumsan ullamcorper. In a quam laoreet, porta orci sed, tincidunt justo. Maecenas ut ante viverra,
-            sollicitudin urna et, gravida nunc. Sed a dolor at lectus vulputate interdum eget a sapien. Phasellus
-            gravida odio vitae erat dapibus blandit id at diam. Suspendisse feugiat tincidunt gravida. Morbi malesuada
-            nisi vel dui suscipit lacinia.</p>
-        <a href="#contato" class="botao"> Contrate agora</a>
+        <h2>NOSSO COMBATE</h2>
+        <p>Buscando ajudar territórios do Brasil
+            aonde o acesso a energia elétrica é
+            distante para pessoas de baixa renda
+            e com condições de vida mínimas,
+            nossa ideia de solução foi pensada
+            para suprir essa necessidade.
+            Queremos tornar melhor a vida de cidadãos que, pela falta de eletricidade,
+            não tem acesso também a comunicação e a educação de qualidade. E ajudar o
+            meio ambiente reduzindo os gases que emitem no efeito estufa.
+        </p>
+        <a href="finans/doação.html" class="botao"> Apoie o nosso projeto!</a>
     </section>
 
     <section id="serviços">
@@ -57,26 +66,24 @@
 
         <div>
 
-            <img src="img-2/energia-solar.png" width="44"  alt="Camera">
+            <img src="img-2/energia-solar.png" width="44" alt="Camera">
             <h3>Ajudar territórios que não tem energia</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet suscipit libero. Suspendisse
-                id
-                elit et leo ornare hendrerit sed condimentum nibh. Phasellus in lectus id lectus lacinia feugiat quis et
-                erat. Praesent laoreet, orci a ornare convallis, enim arcu tempor nunc, in vehicula nunc ipsum a dui.
-                Nunc
+            <p>Amazonias, Pará, Amapá são territórios que precisam de um forncecimento de energia com mais qualidade.
+                São territórios onde o forncecimento de energia não tem uma qualidade boa, além de prejudicar o meio ambiente
+                e ter um custo elevado para pessoas que não tem uma fonte de renda muito boa. Nossa idéia é ajudar esses territórios
+                ao longo do tempo levando energia de qualidade e acessível para essas pessoas.
             </p>
 
         </div>
 
         <div>
 
-            <img src="img-2/p2.png"  alt="filme">
+            <img src="img-2/cyborg-26.png" width="44" alt="filme">
             <h3>Incentivar o uso de energia fotovoltaica</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet suscipit libero. Suspendisse
-                id
-                elit et leo ornare hendrerit sed condimentum nibh. Phasellus in lectus id lectus lacinia feugiat quis et
-                erat. Praesent laoreet, orci a ornare convallis, enim arcu tempor nunc, in vehicula nunc ipsum a dui.
-                Nunc
+            <p>Mostrar para as pessoas que a energia fotovoltaica pode ser uma nova opção para todos nós brasileiros,
+                economizando energia, ajudando o meio ambiente, pagando mais barato e mostrando que todos podem
+                ter acesso a uma energia de qualidade sem desigualdades. Aproveitando o clima tropical de nosso país, 
+                sol e calor, e beneficiando ainda mais pessoas que moram nas regiões do Norte e Nordeste.
             </p>
 
         </div>
@@ -85,41 +92,40 @@
 
             <img src="img-2/energia-solar (2).png" width="44" alt="Videoplayer">
             <h3>Ajudar o meio ambiente com energias renováveis</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet suscipit libero. Suspendisse
-                id
-                elit et leo ornare hendrerit sed condimentum nibh. Phasellus in lectus id lectus lacinia feugiat quis et
-                erat. Praesent laoreet, orci a ornare convallis, enim arcu tempor nunc, in vehicula nunc ipsum a dui.
-                Nunc
+            <p>Diminuindo poluições que fontes de energias não renováveis gastam, a energia solar junto com outras fontes
+                de energias renováveis trás um céu mais limpo, não causa prejuízos para o meio ambiente e, assim com o tempo
+                o planeta passa a ser mais limpo e preservado. 
             </p>
 
         </div>
 
         <div>
 
-            <img src="img-2/energia-solar (1).png" width="44"  alt="Camera">
+            <img src="img-2/energia-solar (1).png" width="44" alt="Camera">
             <h3>Criar um grande time de pessoas para salvar o planeta</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet suscipit libero. Suspendisse
-                id
-                elit et leo ornare hendrerit sed condimentum nibh. Phasellus in lectus id lectus lacinia feugiat quis et
-                erat. Praesent laoreet, orci a ornare convallis, enim arcu tempor nunc, in vehicula nunc ipsum a dui.
-                Nunc
+            <p>Somos uma Organização Sem Fins Lucrativos, pessoas em conjunto fazem a diferença, ajudam e contribuem
+                com essa ação de melhorar vidass e o meio ambiente. Para isso procuramos criar um grande time de pessoas,
+                parcerias com outros projetos, coleta de ideias de soluções, pessoas para apoiar nosso projeto e, assim, poder
+                cuidar do nosso planeta e ajudar pessoas.
             </p>
 
         </div>
 
         <section id="fotos">
-            <h2>Fotos</h2>
-            <img src="img-2/ceu.jpg" alt="ceu">
-            <img src="img-2/grama.jpg" alt="grama">
-            <img src="img-2/montanha.jpg" alt="montanha">
-            <img src="img-2/mar.jpg" alt="mar">
-            <img src="img-2/arvores.jpg" alt="arvores">
-            <img src="img-2/ponte.jpg" alt="pontes">
+            <h2>Veja como é a realidade de regiões do Brasil que a mídia não mostram com muita frequência</h2>
+            <img src="img-2/familia_de_luiz_francisco_dos_santos__77__aposentado_e_cadeirante__em_sao_desiderio__ba_-800x495.jpeg" width="220" height="200" alt="">
+            <img src="img-2/07-casa-isolada-cafundo-800x450.jpg" width="220" height="200" alt="">
+            <img src="img-2/unnamed.jpg" width="220" height="200" alt="">
+            <img src="img-2/lampada-alfredo-moser.jpg" width="220" height="200" alt="mar">
+            <img src="img-2/vovi.jpeg" width="220" height="200" alt="">
+            <img src="img-2/mok.jpeg" width="220" height="200" alt="">
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Vem falar com a gente</p>
+            <p>Entre em contato com a gente para ideias de soluções, para ser nosso voluntário 
+                e apoiar o nosso projeto!
+            </p>
 
             <div>
                 <img src="img-2/tel.png" alt="telefone">
@@ -128,7 +134,7 @@
 
             <div>
                 <img src="img-2/mail.png" alt="e-mail">
-                <p> <a href="mailto:institutoenergy@gmail.com"> institutoenergy@gmail.com </a></p>
+                <p> <a href="mailto:capsulecorp@gmail.com"> capsulecorp@gmail.com </a></p>
             </div>
 
         </section>
