--- a/index.html
+++ b/index.html
@@ -4,31 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <!--Não mexa nesse link, pois é a a fonte das letras  do site-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <title>Capsule Corp.</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link
-        href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,700&family=Nunito:wght@700&family=Yellowtail&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;1,300;1,400;1,500;1,600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-
     <nav>
-        <a href="#">CAPSULE CORP</a>
+        <img src="img/logo.png" id="logo">
         <ul>
-            <li><a href="#sobre">SOBRE</a></li>
-            <li><a href="finans/doação.html">APOIAR A CAPSULE</a></li>
-            <li><a href="News/news.html">NOTÍCIAS</a></li>
-            <li><a href="contato.html">CONTATO</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="news.html">NEWS</a></li>
+            <li><a href="login.html">FAÇA PARTE</a></li>
+            <li><a href="apoie.html">APOIE ESSA CAUSA</a></li>
         </ul>
     </nav>
-
     <header id="topo">
-        <h1>CAPSULE CORP</h1>
-        <p>CAPSULE CORP, uma Organização Sem Fins Lucrativos, criada através da necessidade dos
+        <h1>CAPSULE CORP.</h1>
+        <p>CAPSULE CORP., uma Organização Sem Fins Lucrativos, criada através da necessidade dos
             Objetivos de Desenvolvimento Sustentável da Organização das Nações Unidas.
             Entre 1990 e 2010, o número de pessoas com acesso à eletricidade cresceu 1.7 bilhão, e como a população
             global continua a crescer, também crescerá a demanda por energia barata. Uma economia global dependente de
@@ -43,7 +42,7 @@
             planeta. Expandir a infraestrutura e modernizar a tecnologia para fornecer energia limpa em todos os países
             em desenvolvimento é um objetivo crucial para que o crescimento econômico colabore com o meio ambiente.
         </p>
-        <a href="#serviços" class="botao"> Ver mais...</a>
+        <a href="#serviços" class="botao">Saiba Mais</a>
     </header>
 
     <section id="sobre">
@@ -58,19 +57,21 @@
             não tem acesso também a comunicação e a educação de qualidade. E ajudar o
             meio ambiente reduzindo os gases que emitem no efeito estufa.
         </p>
-        <a href="finans/doação.html" class="botao"> Apoie o nosso projeto!</a>
+        <a href="doação.html" class="botao">Apoie essa causa</a>
     </section>
 
+    <h2 id="objetivos">OBJETIVOS</h2>
     <section id="serviços">
-        <h2>Objetivos</h2>
 
         <div>
 
-            <img src="img-2/energia-solar.png" width="44" alt="Camera">
+            <img src="img/energia-solar.png" width="44" alt="Camera">
             <h3>Ajudar territórios que não tem energia</h3>
             <p>Amazonias, Pará, Amapá são territórios que precisam de um forncecimento de energia com mais qualidade.
-                São territórios onde o forncecimento de energia não tem uma qualidade boa, além de prejudicar o meio ambiente
-                e ter um custo elevado para pessoas que não tem uma fonte de renda muito boa. Nossa idéia é ajudar esses territórios
+                São territórios onde o forncecimento de energia não tem uma qualidade boa, além de prejudicar o meio
+                ambiente
+                e ter um custo elevado para pessoas que não tem uma fonte de renda muito boa. Nossa idéia é ajudar esses
+                territórios
                 ao longo do tempo levando energia de qualidade e acessível para essas pessoas.
             </p>
 
@@ -78,11 +79,11 @@
 
         <div>
 
-            <img src="img-2/cyborg-26.png" width="44" alt="filme">
+            <img src="img/cyborg-26.png" width="44" alt="filme">
             <h3>Incentivar o uso de energia fotovoltaica</h3>
             <p>Mostrar para as pessoas que a energia fotovoltaica pode ser uma nova opção para todos nós brasileiros,
                 economizando energia, ajudando o meio ambiente, pagando mais barato e mostrando que todos podem
-                ter acesso a uma energia de qualidade sem desigualdades. Aproveitando o clima tropical de nosso país, 
+                ter acesso a uma energia de qualidade sem desigualdades. Aproveitando o clima tropical de nosso país,
                 sol e calor, e beneficiando ainda mais pessoas que moram nas regiões do Norte e Nordeste.
             </p>
 
@@ -90,50 +91,54 @@
 
         <div>
 
-            <img src="img-2/energia-solar (2).png" width="44" alt="Videoplayer">
+            <img src="img/energia-solar (2).png" width="44" alt="Videoplayer">
             <h3>Ajudar o meio ambiente com energias renováveis</h3>
-            <p>Diminuindo poluições que fontes de energias não renováveis gastam, a energia solar junto com outras fontes
-                de energias renováveis trás um céu mais limpo, não causa prejuízos para o meio ambiente e, assim com o tempo
-                o planeta passa a ser mais limpo e preservado. 
+            <p>Diminuindo poluições que fontes de energias não renováveis gastam, a energia solar junto com outras
+                fontes
+                de energias renováveis trás um céu mais limpo, não causa prejuízos para o meio ambiente e, assim com o
+                tempo
+                o planeta passa a ser mais limpo e preservado.
             </p>
 
         </div>
 
         <div>
 
-            <img src="img-2/energia-solar (1).png" width="44" alt="Camera">
+            <img src="img/energia-solar (1).png" width="44" alt="Camera">
             <h3>Criar um grande time de pessoas para salvar o planeta</h3>
             <p>Somos uma Organização Sem Fins Lucrativos, pessoas em conjunto fazem a diferença, ajudam e contribuem
-                com essa ação de melhorar vidass e o meio ambiente. Para isso procuramos criar um grande time de pessoas,
-                parcerias com outros projetos, coleta de ideias de soluções, pessoas para apoiar nosso projeto e, assim, poder
+                com essa ação de melhorar vidass e o meio ambiente. Para isso procuramos criar um grande time de
+                pessoas,
+                parcerias com outros projetos, coleta de ideias de soluções, pessoas para apoiar nosso projeto e, assim,
+                poder
                 cuidar do nosso planeta e ajudar pessoas.
             </p>
 
         </div>
 
         <section id="fotos">
-            <h2>Veja como é a realidade de regiões do Brasil que a mídia não mostram com muita frequência</h2>
-            <img src="img-2/familia_de_luiz_francisco_dos_santos__77__aposentado_e_cadeirante__em_sao_desiderio__ba_-800x495.jpeg" width="220" height="200" alt="">
-            <img src="img-2/07-casa-isolada-cafundo-800x450.jpg" width="220" height="200" alt="">
-            <img src="img-2/unnamed.jpg" width="220" height="200" alt="">
-            <img src="img-2/lampada-alfredo-moser.jpg" width="220" height="200" alt="mar">
-            <img src="img-2/vovi.jpeg" width="220" height="200" alt="">
-            <img src="img-2/mok.jpeg" width="220" height="200" alt="">
+            <h2>Realidade de regiões do Brasil com situação precária</h2>
+            <img src="img/familia_de_luiz_francisco_dos_santos__77__aposentado_e_cadeirante__em_sao_desiderio__ba_-800x495.jpeg"
+                width="220" height="200" alt="">
+            <img src="img/07-casa-isolada-cafundo-800x450.jpg" width="220" height="200" alt="">
+            <img src="img/unnamed.jpg" width="220" height="200" alt="">
+            <img src="img/lampada-alfredo-moser.jpg" width="220" height="200" alt="mar">
+            <img src="img/vovi.jpeg" width="220" height="200" alt="">
+            <img src="img/mok.jpeg" width="220" height="200" alt="">
         </section>
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Entre em contato com a gente para ideias de soluções, para ser nosso voluntário 
-                e apoiar o nosso projeto!
+            <p>Entre em contato para parcerias, para ser nosso voluntário e apoiar a causa deste projeto!
             </p>
 
             <div>
-                <img src="img-2/tel.png" alt="telefone">
+                <img src="img/tel.png" alt="telefone">
                 <p> <a href="tel:48999887733"> (11)951189853 </a></p>
             </div>
 
             <div>
-                <img src="img-2/mail.png" alt="e-mail">
+                <img src="img/mail.png" alt="e-mail">
                 <p> <a href="mailto:capsulecorp@gmail.com"> capsulecorp@gmail.com </a></p>
             </div>
 
@@ -145,5 +150,4 @@
         </footer>
 
 </body>
-
 </html>
