--- a/news.html
+++ b/news.html
@@ -3,66 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAPSULE NEWS</title>
+    <title>News</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/news.css">
 </head>
 
 <body>
     <header>
         <div class="website-header">
-            <img src="logo.png">
-            <h1>CAPSULE CORP NEWS</h1>
-            <div class="social-icons">
-                <i class="fab fa-facebook-f"></i>
-                <!-- <i class="fab fa-twitter"></i>  -->
-                <!-- <i class="fab fa-google-plus-g"></i> -->
-                <i class="fab fa-instagram"></i>
-                <!-- <i class="fas fa-rss"></i> -->
-            </div>
+            <img src="img/logo.png">
+            <h1>Capsule Corp. NEWS</h1>
         </div>
         <nav class="navbar navbar-expand-md ">
-            <!-- Brand -->
 
-
-            <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html">INÍCIO</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">QUEM SOMOS</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="../finans/doação.html">APOIAR A CAPSULE</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">BUSINESS</a>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">OBJETIVOS</a>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="../contato.html">CONTATO</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">SPORT</a>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">CARS</a>
-                    </li> -->
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">VIDEOS</a>
-                    </li> -->
+                        <a class="nav-link" href="index.html">PÁGINA HOME</a>
                 </ul>
             </div>
         </nav>
@@ -96,14 +61,14 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="images/amapa1.jpg" alt="First slide">
+                                <img class="d-block w-100" src="img/amapa1.jpg" alt="First slide">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>REVOLTA NO AMAPÁ POR FALTA DE ENERGIA !</h5>
                                     <p>23/11/2020</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="images/moradora.jpeg" alt="Second slide">
+                                <img class="d-block w-100" src="img/moradora.PNG" alt="Second slide">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>MORADORES COM MEDO</h5>
                                     <p>Segundo a moradora, o problema começou desde o início racionamento de energia por
@@ -113,7 +78,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="images/chuva.jpg" alt="Third slide">
+                                <img class="d-block w-100" src="img/chuva.PNG" alt="Third slide">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Chuva mais intensa do ano</h5>
                                     <p>De acordo com o Núcleo de Hidrometeorologia (NHMet) do Instituto de Pesquisas
@@ -139,13 +104,13 @@
                 <h2>MAIS RECENTES</h2>
                 <section class="news">
                     <div class="news-container">
-                        <img src="images/ambev.jpg">
+                        <img src="img/ambev.jpg">
                         <p class="carousel-text">Centros de distribuição da Ambev terão usinas solares.</p>
                     </div>
                 </section>
                 <section class="news">
                     <div class="news-container">
-                        <img src="images/municipal.jpg">
+                        <img src="img/municipal.jpg">
                         <p class="carousel-text">Câmara Municipal de Vitória da Conquista quer reduzir conta de luz com
                             energia solar</p>
                     </div>
@@ -155,14 +120,13 @@
                 <h2>OUTROS</h2>
                 <section class="news">
                     <div class="news-container">
-                        <img src="images/solar.jpg">
+                        <img src="img/solar.jpg">
                         <p class="carousel-text">Pequena parte da energia solar alimentaria todo o mundo, diz Musk</p>
                     </div>
                 </section>
                 <section class="news">
                     <div class="news-container">
-                        <img src="images/musk.png">
-                        <!-- <p class="carousel-text"></p> -->
+                        <img src="img/musk.png">
                     </div>
                 </section>
             </div>
@@ -171,7 +135,7 @@
             <div class="news-section">
                 <article class="world">
                     <h2>NOTÍCIAS DO BEM</h2>
-                    <img src="images/brasil.png">
+                    <img src="img/brasil.png">
                     <h3>Brasil estreia no Top 10 dos maiores empregadores em energia solar</h3>
                     <p>A energia solar segue fazendo história no Brasil e o número de empregos criados pelo setor em
                         2019 levou o país, pela primeira vez, ao ranking mundial dos 10 maiores empregadores em energia
@@ -183,7 +147,7 @@
                 </article>
                 <article class="sport">
                     <h2>NOTÍCIAS DO BEM</h2>
-                    <img src="images/australia.jpg">
+                    <img src="img/australia.jpg">
                     <h3>Região da Austrália passa uma hora usando apenas energia solar</h3>
                     <p>Uma região inteira da Austrália conseguiu operar durante uma hora apenas com 100% da eletricidade
                         gerada a partir de energia solar. O feito aconteceu em 11 de outubro deste ano no estado de
@@ -199,24 +163,24 @@
             <aside>
                 <h4>RECENTE</h4>
                 <div class="recent-news">
-                    <img src="images/article1.jpg">
-                    <p>2018 Mercedes-AMG C63 Coupe Makes its Debut</p>
+                    <img src="img/Energia-Solar.jpg" width="45">
+                    <p>Mesmo com crise, geração fotovoltaica dobra de tamanho no Ceará</p>
                 </div>
                 <div class="recent-news">
-                    <img src="images/aside2.jpg">
-                    <p>2018 Mercedes-AMG C63 Coupe Makes its Debut</p>
+                    <img src="img/Energiass-Solar.jpg">
+                    <p>Petroleira que possui parque solar no Ceará quer aumentar projetos de energia limpa no Brasil</p>
                 </div>
                 <div class="recent-news">
-                    <img src="images/aside3.jpg">
-                    <p>2018 Mercedes-AMG C63 Coupe Makes its Debut</p>
+                    <img src="img/solar (1).jpg" width="45">
+                    <p>Ministro diz que Nordeste terá investimentos de R$ 26 bi para expansão energética</p>
                 </div>
                 <div class="recent-news">
-                    <img src="images/aside4.jpg">
-                    <p>2018 Mercedes-AMG C63 Coupe Makes its Debut</p>
+                    <img src="img/usina-solar.jpg">
+                    <p>Obras de usinas solares não param, assegura Governo do Estado</p>
                 </div>
                 <div class="recent-news">
-                    <img src="images/aside5.jpg">
-                    <p>2018 Mercedes-AMG C63 Coupe Makes its Debut</p>
+                    <img src="img/Energia-Solar.jpg">
+                    <p>Ceará recebe novo projeto de geração distribuída</p>
                 </div>
             </aside>
         </section>
@@ -224,42 +188,34 @@
     <footer>
         <div class="social-links">
             <section class="about">
-                <h2>Contribua com a Capsule Corp ajudar pessoas que sofrem problemas de energia</h2>
+                <h2>Contribua com a Capsule Corp.</h2>
                 <p>Nosso projeto, uma Organização Sem Fins Lucrativos, busca pessoas se voluntariar em nos ajudar
                     a ter um grande time de pessoas para ajudar territórios do Brasil que sofrem com problemas de
                     energia acessível
                     e não tem uma qualidade de vida boa.
                 </p>
+                <a href="apoie.html"><input class="footer-buttons" type="text" value="Contribuir" id="bt1"></a>
                 <div class="social-icons-footer">
-                    <!-- <i class="fab fa-facebook"></i> -->
-                    <!-- <i class="fab fa-twitter-square"></i> -->
-                    <!-- <i class="fab fa-google-plus-square"></i> -->
-                    <i class="fab fa-instagram"></i>
-                    <!-- <i class="fas fa-rss-square"></i> -->
-                    <!-- <i class="fab fa-youtube-square"></i> -->
-                    <!-- <i class="fas fa-rss-square"></i> -->
-                    <!-- <i class="fab fa-pinterest-square"></i> -->
-                    <!-- <i class="fab fa-linkedin"></i> -->
                 </div>
             </section>
             <section class="Instagram">
-                <h2>Instagram</h2>
-                <img src="images/aside2.jpg">
-                <img src="images/aside3.jpg">
-                <img src="images/aside4.jpg">
-                <img src="images/aside5.jpg">
-                <img src="images/aside2.jpg">
-                <img src="images/aside3.jpg">
-                <img src="images/aside4.jpg">
-                <img src="images/aside5.jpg">
-                <img src="images/aside2.jpg">
-                <button type="button" class="footer-buttons">Siga nosso Instagram!</button>
+                <h2>Acompanhe-nos</h2>
+                <img src="img/aside2.jpg">
+                <img src="img/aside3.jpg">
+                <img src="img/aside4.jpg">
+                <img src="img/aside5.jpg">
+                <img src="img/aside2.jpg">
+                <img src="img/aside3.jpg">
+                <img src="img/aside4.jpg">
+                <img src="img/aside5.jpg">
+                <img src="img/aside2.jpg">
+                <a href="https://www.instagram.com/capsule_corp_energ/"><button type="button" class="footer-buttons" id="bt2">Instagram</a></button>
             </section>
             <section class="Subscribe">
-                <h2>Inscreva-se no Capsule Corp</h2>
-                <p>Digite seu e-mail para continuar se mantendo informado.</p>
+                <h2>Para mais notícias</h2>
+                <p>Informe seu e-mail para receber nossa news letter mensalmente.</p>
                 <input type="email" placeholder="E-mail">
-                <button type="button" class="footer-buttons">Inscreva-se!</button>
+                <button type="button" class="footer-buttons" id="bt3">Inscreva-se</button>
             </section>
         </div>
 
@@ -267,13 +223,13 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-    </script>
+        </script>
 </body>
 
 </html>
